--- a/.github/workflows/proxy_check.yml
+++ b/.github/workflows/proxy_check.yml
@@ -36,3 +36,12 @@ jobs:
             proxy_scheme.txt
             proxy_active.txt
             proxy_scheme_active.txt
+
+      - name: Commit and push proxy files
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+          git add proxy.txt proxy_scheme.txt proxy_active.txt proxy_scheme_active.txt
+          git commit -m "Update proxy files [skip ci]" || echo "No changes to commit"
+          git push origin HEAD:main
